text align fix

--- a/css/history.css
+++ b/css/history.css
@@ -1,6 +1,6 @@
 .history {
     display: flex;
-    width: 900px;
+    width: 800px;
     margin: 0 auto;
 }
 
@@ -8,6 +8,7 @@
     width: 100;
     font-size: 18px;
     line-height: 32px;
+    text-align:  justify;
 }
 
 .history__title {
